--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start:solution": "npm run -it docker:build && npm run docker:run",
 		"test": "mocha test",
 		"test:solution": "npm run docker:build && npm run docker:test",
-		"studentTest": "nyc --reporter=text mocha test -g test/caesar.test.js test/polybius.test.js test/substitution.test.js"
+		"studentTest": "nyc --reporter=text mocha test/caesar.test.js test/polybius.test.js test/substitution.test.js"
 	},
 	"keywords": [],
 	"author": "",
